# survey-bayes

./: .pre-commit-config.yaml  AI_DISCLOSURE.md  README.md  likert_likert_metric.py  main.py  pyproject.toml
src/plotting/: beta_plots.py
src/synthetic_data/: likert.py
tutorials/: correlation.py  introduction_bayes.ipynb  introduction_bayes.py
