[project]
name = "survey-bayes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.23.1",
    "bambi>=0.16.0",
    "black>=26.1.0",
    "ipython>=9.9.0",
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
